# stratum

./: .env.example  .env.production.example  .gitignore  Anchor.toml  Cargo.toml  docker-compose.production.yml  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  test-anchor-raw.js  test-anchor.js  tsconfig.base.json  turbo.json
app/: GlowCursor.tsx  ParallaxLight.tsx  globals.css  layout.tsx  page.tsx
apps/console/: next.config.mjs  package.json
apps/console/app/: layout.tsx  page.tsx
apps/explorer/: package.json  tailwind.config.ts
apps/explorer/app/: globals.css  layout.tsx  page.tsx
apps/gateway/: .env.example  .env.phala  Dockerfile  docker-compose.phala.yml  fly.toml  package.json  railway.toml  tsup.config.ts
apps/gateway/prisma/: schema.prisma
apps/gateway/scripts/: create-admin-key.ts
apps/gateway/src/: auth-hold.ts  auth.ts  balance-check.ts  balance-monitor.ts  crypto.ts  index.ts  mpp-adapter.ts  receipt-store.ts  (+8 more)
apps/simulator/: package.json
apps/web/: package.json  tailwind.config.ts
docker/: docker-compose.yml
programs/stratum-anchor/: Cargo.toml
programs/stratum-anchor/src/: lib.rs
scripts/: export-keypair.ts  setup-devnet.sh  setup-settlement.ts  test-anchor.ts
stratum-prompts/: 01_scaffold.md  02_core_types_receipts.md  03_merkle_anchoring.md  04_netting_ledger.md  05_settlement_adapter.md  06_website_hero.md  07_website_how_comparison.md  08_website_integration_footer.md  09_console_core.md  10_console_realtime.md  11_gateway.md  12_explorer.md  13_integration_simulator.md  README.md  STRATUM_CONTEXT.md
(+119 files in other folders)
