[package]
name = "stratum-anchor"
version = "0.1.0"
description = "Solana program for anchoring Stratum Merkle roots on-chain"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "stratum_anchor"

no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.32.1"


[features]
idl-build = ["anchor-lang/idl-build"]
